--- a/getting-started/quick-start-guide/index.html
+++ b/getting-started/quick-start-guide/index.html
@@ -1268,8 +1268,8 @@
 <p>Users are recommended to follow the <a href="../docker-setup/">Docker Setup</a> installation.</p>
 </div>
 <p><a href="https://github.com/IMDA-BTG/aiverify/releases">Download AI Verify release file here.</a></p>
-<object data="../../res/quick-start-guide.pdf" type="application/pdf" width="100%" height="600px">
-  <p>Unable to display PDF, <a href="../../res/quick-start-guide.pdf">click here to download it</a>.</p>
+<object data="../../res/AIVT_2.0_quick_start_guide.pdf" type="application/pdf" width="100%" height="600px">
+  <p>Unable to display PDF, <a href="../../res/AIVT_2.0_quick_start_guide.pdf">click here to download it</a>.</p>
 </object>
 
 
